# discord-smasaku-rs

./: .env  Cargo.toml  LICENSE  README.md  TODO.md
src/: main.rs
src/capitalizer/: capitalize.rs
src/commands/: bantuan.rs  mod.rs  perkenalan.rs  perkenalan_slash.rs
