[package]
name = "discord-smasaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "time",
    "unstable_discord_api",
    "utils",
    "rustls_backend",
], version = "0.11.5" }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
